# SpedImage

./: .gitignore  .typos.toml  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  Cargo.toml  LICENSE  README.md  build.rs  cliff.toml  clippy_output.txt  cog.toml  deny.toml  help.txt  install_deps.sh  installer.nsi  justfile  log.txt  project_context.md
.cargo/: config.toml
.desloppify/: issues.json  plan.json  plan.json.bak  query.json  review_packet_blind.json  state-rust.json  state-rust.json.bak
.desloppify/review_packets/: holistic_packet_20260307_112635.json  holistic_packet_20260307_123039.json  holistic_packet_20260307_131435.json  holistic_packet_20260307_165706.json  holistic_packet_20260307_170624.json  holistic_packet_20260307_170955.json
.desloppify/subagents/runs/20260307_112609/prompts/: batch-1.md  batch-2.md  batch-3.md  batch-4.md  batch-5.md  batch-6.md
.desloppify/subagents/runs/20260307_112635/: run_summary.json
.desloppify/subagents/runs/20260307_112635/prompts/: batch-1.md  batch-10.md  batch-11.md  batch-12.md  batch-13.md  batch-14.md  batch-15.md  batch-16.md  batch-17.md  batch-18.md  batch-19.md  batch-2.md  batch-20.md  batch-3.md  batch-4.md  batch-5.md  batch-6.md  batch-7.md  batch-9.md
.desloppify/subagents/runs/20260307_123039/prompts/: batch-5.md  batch-7.md
.desloppify/subagents/runs/20260307_123055/: run_summary.json
.desloppify/subagents/runs/20260307_123055/prompts/: batch-11.md  batch-12.md  batch-13.md  batch-18.md  batch-5.md
.desloppify/subagents/runs/20260307_123055/results/: batch-1.json  batch-10.json  batch-11.json  batch-12.json  batch-13.json  batch-14.json  batch-15.json  batch-16.json  batch-17.json  batch-18.json  batch-19.json  batch-2.json  batch-20.json  batch-3.json  batch-4.json  batch-5.json  batch-6.json  batch-7.json  batch-8.json  batch-9.json
.desloppify/subagents/runs/20260307_131404/prompts/: batch-2.md  batch-3.md  batch-4.md  batch-6.md  batch-8.md
.desloppify/subagents/runs/20260307_131435/: run_summary.json
.desloppify/subagents/runs/20260307_131435/prompts/: batch-10.md  batch-14.md  batch-15.md  batch-16.md  batch-17.md  batch-19.md  batch-2.md  batch-20.md  batch-3.md  batch-4.md  batch-6.md  batch-8.md  batch-9.md
.desloppify/subagents/runs/20260307_131435/results/: batch-1.json  batch-2.json
.desloppify/subagents/runs/20260307_165706/prompts/: batch-1.md  batch-3.md  batch-4.md  batch-5.md  batch-6.md  batch-7.md
.desloppify/subagents/runs/20260307_170624/prompts/: batch-3.md  batch-4.md  batch-5.md
.desloppify/subagents/runs/20260307_170955/: holistic_issues_merged.json  run_summary.json
.desloppify/subagents/runs/20260307_170955/prompts/: batch-2.md  batch-8.md
.desloppify/subagents/runs/20260307_170955/results/: batch-1.raw.txt  batch-10.json  batch-11.json  batch-12.json  batch-13.json  batch-14.json  batch-15.raw.txt  batch-16.raw.txt  batch-17.json  batch-18.raw.txt  batch-19.json  batch-2.raw.txt  batch-20.json  batch-3.json  batch-4.json  batch-5.raw.txt  batch-6.json  batch-7.json  batch-8.raw.txt  batch-9.raw.txt
.github/workflows/: build.yml  release.yml
benches/: image_processing.rs
docs/: index.html
src/: App.cpp  App.h  DirList.cpp  DirList.h  Editor.cpp  GuiLayer.cpp  GuiLayer.h  Image.cpp  ImageBackend.h  ImageBackend_Linux.cpp  ImageBackend_Linux.h  ImageBackend_Win32.cpp  ImageBackend_Win32.h  app.rs  config.rs  editor.c  editor.h  gpu_renderer.rs  image.c  image.h  image_backend.rs  lib.rs  main.c  main.cpp  main.rs  ui.c  ui.h  ui.rs  utils.c  utils.h  viewport.c  viewport.h  window.c  window.h
src/app/: actions.rs  constants.rs  events.rs  mod.rs  services.rs  state.rs  types.rs
src/image/: loader.rs  metadata.rs  mod.rs  processing.rs  types.rs
src/render/: mod.rs  overlay.rs  renderer.rs  shaders.rs  thumbnails.rs  types.rs
tests/: ui_tests.rs  unit_tests.rs
