[package]
name = "spedimage"
version = "2.0.0"
edition = "2021"
description = "Ultra-Lightweight GPU-Accelerated Image Viewer"
authors = ["SpedImage Team"]
license = "MIT"
rust-version = "1.82"

[dependencies]
# UI and Windowing
winit = { version = "0.30", features = ["rwh_06"] }
egui = "0.31"
egui-winit = { version = "0.31", features = ["links", "rwh_06"] }
egui-wgpu = { version = "0.31", features = ["wgpu-backend"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "bmp", "tiff", "webp", "ico", "tga"] }
zune-image = "0.5"
rimage = "0.11"
imagepipe = "0.5"
pollster = "0.3"
color-eyre = "0.6"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rayon = "1.10"
lru = "0.12"
notify-debouncer-full = "0.3"
rfd = "0.15"
arboard = "3.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
kamadak-exif = "0.5"

# GPU Rendering
wgpu = "26.0"
bytemuck = { version = "1.19", features = ["derive"] }
fast_image_resize = "3.0"

# Concurrency
crossbeam-channel = "0.5"
parking_lot = "0.12"
dashmap = "6.1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_UI_Shell",
] }

[lib]
name = "spedimage_lib"
path = "src/lib.rs"

[[bin]]
name = "spedimage"
path = "src/main.rs"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
