[package]
name = "spedimage"
version = "2.0.0"
edition = "2024"
description = "Ultra-Lightweight GPU-Accelerated Image Viewer"
authors = ["SpedImage Team"]
license = "MIT"
rust-version = "1.94.0"

[dependencies]
# Performance and Features Integrations
mimalloc = "0.1.43"
fast_image_resize = "6.0"
# tracing-tracy = "0.11"
wgpu-profiler = "0.27"
jxl-oxide = "0.11"
# # qcms = "0.2"

# UI and Windowing
winit = { version = "0.30", features = ["rwh_06"] }
egui = "0.34"
egui-winit = { version = "0.34", features = ["links"] }
egui-wgpu = "0.34"
zune-image = { version = "0.5", features = ["threads"] }
zune-core = "0.5"
zune-imageprocs = "0.5"
tiff = "0.9"
gif = "0.13"
resvg = "0.47"
half = "2.4"
pollster = "0.3"
color-eyre = "0.6"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rayon = "1.10"
lru = "0.16"
notify-debouncer-full = "0.3"
rfd = "0.15"
arboard = "3.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
kamadak-exif = "0.5"

# GPU Rendering
wgpu = "29.0"
bytemuck = { version = "1.19", features = ["derive"] }

# Concurrency
crossbeam-channel = "0.5"
parking_lot = "0.12"
dashmap = "6.1"
quick_cache = "0.6"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_UI_Shell",
] }

[dev-dependencies]
divan = "0.1"

[lib]
name = "spedimage_lib"
path = "src/lib.rs"

[[bin]]
name = "spedimage"
path = "src/main.rs"

[[bench]]
name = "image_processing"
harness = false

[workspace.metadata.dist]
cargo-dist-version = "0.13.0"
ci = "github"
installers = ["shell", "powershell"]
targets = ["x86_64-pc-windows-msvc"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = "symbols"
panic = "abort"

[profile.dist]
inherits = "release"
lto = "thin"
