[package]
name = "spedimage"
version = "0.6.1"
edition = "2024"
description = "Ultra-Lightweight GPU-Accelerated Image Viewer"
authors = ["SpedImage Team"]
license = "MIT"
rust-version = "1.94.0"

[dependencies]
# Performance and Features Integrations
mimalloc = "0.1.43"
fast_image_resize = "6.0"
jxl-oxide = "0.11"
memmap2 = "0.9"
qcms = "0.3"

# UI and Windowing
winit = { version = "0.30", features = ["rwh_06"] }
egui = "0.34"
egui-winit = { version = "0.34", features = ["links"] }
egui-wgpu = "0.34"
zune-image = { version = "0.5", features = ["threads"] }
zune-core = "0.5"
zune-imageprocs = "0.5"
tiff = "0.9"
gif = "0.13"
resvg = "0.47"
pollster = "0.3"
color-eyre = "0.6"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rayon = "1.10"
dirs = "5.0"
notify-debouncer-full = "0.3"
rfd = "0.15"
arboard = "3.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
kamadak-exif = "0.5"

# GPU Rendering
wgpu = "29.0"
bytemuck = { version = "1.19", features = ["derive"] }

# Concurrency
crossbeam-channel = "0.5"
parking_lot = "0.12"
wallpaper = "3.2"
moka = { version = "0.12", features = ["sync"] }
heic = { git = "https://github.com/imazen/heic", features = ["backend-rust", "backend-mediafoundation", "av1"] }
rawloader = "0.37.1"
trash = "5.2"


[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_UI_Shell",
    "Win32_System_Threading",
] }

[dev-dependencies]
divan = "0.1"

[lib]
name = "spedimage_lib"
path = "src/lib.rs"

[[bin]]
name = "spedimage"
path = "src/main.rs"

[[bench]]
name = "image_processing"
harness = false

[workspace.metadata.dist]
cargo-dist-version = "0.13.0"
ci = "github"
installers = ["shell", "powershell"]
targets = ["x86_64-pc-windows-msvc"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = "symbols"
panic = "abort"

[profile.dist]
inherits = "release"
lto = "thin"

[profile.dev.package."*"]
opt-level = 3
